
UPDATED FEATURES / MAJOR BUG FIXES:
- Added --version optional argument to pa-getprobanno and pa-getrxnprobs commands
  and corresponding input arguments to get_probanno() and get_rxnprobs() methods
  to specify the version of the object to retrieve
- Enabled support for template models in calculate() method
- Improved performance of calculate() method when a template model is not specified

ANTICIPATED FUTURE DEVELOPMENTS:
- None

VERSION 1.0.4 (Released 01-06-2014)
-----------------------------------------
NEW FEATURES
- Added pa-checkjob command to check status of jobs started by pa-annotate command

UPDATED FEATURES / MAJOR BUG FIXES:
- Switched to user and job state service for job management
- Switched to workspace deluxe service for typed objects

ANTICIPATED FUTURE DEVELOPMENTS:
- None

VERSION 1.0.3 (Released 12-13-2013)
-----------------------------------------
NEW FEATURES
- pa-getprobanno function to get a tabular format from a ProbAnno object

UPDATED FEATURES / MAJOR BUG FIXES:
- None

ANTICIPATED FUTURE DEVELOPMENTS:
- None

VERSION 1.0.2 (Released 11-7-2013)
-----------------------------------------
NEW FEATURES:
- None

UPDATED FEATURES / MAJOR BUG FIXES:
- Reduced redundancy in calculated RxnProbs object GPRs
- Created complete workflow script for probabilistic annotation and gapfill analysis of a genome
- Fixes for tests
- Improved BLAST calling and server flexibility

ANTICIPATED FUTURE DEVELOPMENTS:
- Release of workflow script as part of a probanno narrative
- Incorporation of gene synteny into probability calculations
- Incorporation of template models in pa-calculate

VERSION: 1.0.1 (Released 08-16-2013)
-----------------------------------------
NEW FEATURES:
- pa-getrxnprobs function to get a tabular (easily searchable and joinable) format from a RxnProbs object

UPDATED FEATURES / MAJOR BUG FIXES:
- Updated spec for ProbAnno object, should now be ready for stronger type checking.

ANTICIPATED FUTURE DEVELOPMENTS:
- None
